--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ charset-normalizer==2.0.12
 dgl==0.6.1
 docopt==0.6.2
 idna==3.3
-networkx==2.7.1
 numpy==1.22.3
-pandas==1.4.1
+pandas~=1.4.2
 pipreqs==0.4.11
 python-dateutil==2.8.2
 pytz==2022.1
@@ -16,3 +15,4 @@ torch==1.9.1
 typing_extensions==4.1.1
 urllib3==1.26.9
 yarg==0.1.9
+scikit-learn~=1.0.2
